--- a/src/openhdwebui.client/src/app/hardware/hardware.component.html
+++ b/src/openhdwebui.client/src/app/hardware/hardware.component.html
@@ -180,28 +180,6 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="profile-summary" *ngIf="selectedWifiCard as card">
-          <div>
-            <div class="label">Card Profile</div>
-            <div class="value">{{ getSelectedProfileName() || card.cardName || 'Unknown' }}</div>
-          </div>
-          <div>
-            <div class="label">Vendor / Device</div>
-            <div class="value">{{ card.vendorId || '-' }} / {{ card.deviceId || '-' }}</div>
-          </div>
-          <div>
-            <div class="label">Range</div>
-            <div class="value">
-              <span *ngIf="selectedProfileKey && findProfileByKey(selectedProfileKey) as profile; else rangeUnknown">
-                <ng-container *ngIf="profile.powerMode !== 'fixed'; else fixedRange">
-                  {{ profile.lowest || '-' }} - {{ profile.high || '-' }} {{ profile.powerMode === 'powerindex' ? 'idx' : 'mW' }}
-                </ng-container>
-                <ng-template #fixedRange>Fixed</ng-template>
-              </span>
-              <ng-template #rangeUnknown>Unknown</ng-template>
-            </div>
-          </div>
-        </div>
         <div class="profile-form" *ngIf="wifiProfiles as profileData; else profilesUnavailable">
           <label class="form-field">
             <span>Card profile</span>
@@ -222,16 +200,16 @@
             </div>
           </div>
           <label class="form-field">
-            <span>Power mode</span>
+            <span>TX power mode</span>
             <ng-container *ngIf="!isFixedProfile(); else fixedMode">
               <div class="radio-group">
                 <label>
                   <input type="radio" [(ngModel)]="wifiProfileForm.powerMode" value="mw" [disabled]="loadingWifiProfiles">
-                  mW
+                  Power in mW
                 </label>
                 <label>
                   <input type="radio" [(ngModel)]="wifiProfileForm.powerMode" value="powerindex" [disabled]="loadingWifiProfiles">
-                  Power index
+                  TX power index
                 </label>
               </div>
             </ng-container>
@@ -271,11 +249,6 @@
         <ng-template #profilesUnavailable>
           <p class="muted">Profile list not available.</p>
         </ng-template>
-        <label class="form-field">
-          <span>Power level</span>
-          <input type="text" [(ngModel)]="txPowerForm.powerLevel" [disabled]="txPowerSaving || loadingWifi || isFixedProfile()"
-                 placeholder="lowest | low | mid | high | auto">
-        </label>
         <p class="muted" *ngIf="!hasPowerProfile(selectedWifiCard)">
           No power profile found for this card. Add it to /usr/local/share/OpenHD/SysUtils/wifi_cards.json to enable level selection.
         </p>
